# rtt-lwr-osf-controller

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  experiment_analysis.m  experiment_analysisDualArm.m  experiment_analysisSingleArm.m  getOrocosDataStruct.m  getOrocosDataStructDualArm.m  getOrocosDataStructSingleArm.m
src/: CMakeLists.txt  rtt-controller-component.cpp  rtt-controller-component.hpp
src/TorqueController/: JointTaskTest.cpp  QuinticPolynomial.cpp  QuinticPolynomial.hpp  TaskTest.cpp  TaskTest.hpp  rtt-trq-controller.cpp  rtt-trq-controller.hpp
src/baseclasses/: RTTArmControllerBase.cpp  RTTArmControllerBase.hpp
src/circular-cartesian-task/: CartesianSpace_CircularTask.cpp  CartesianSpace_CircularTask.hpp  rtt-motion-primitive-wrapper.cpp  rtt-motion-primitive-wrapper.hpp
src/constrained-force-controller/: ConstrainedForceController.cpp  ConstrainedForceController.hpp
src/controller/: CartesianSpace_CircularTask.cpp  CartesianSpace_CircularTask.hpp  FileWriterCSV.cpp  FileWriterCSV.hpp  JointTaskTest.hpp  OrientationHelper.cpp  OrientationHelper.hpp  TaskTest.cpp  TaskTest.hpp  rtt-lwr-osf-controller.cpp  rtt-lwr-osf-controller.cpp~  rtt-lwr-osf-controller.hpp  rtt-lwr-osf-controller.hpp~  rtt-motion-primitive-wrapper.cpp  rtt-motion-primitive-wrapper.hpp
src/force-estimator/: ForceEstimator.cpp  ForceEstimator.hpp
src/joint-position-controller/: rtt-jpc.cpp  rtt-jpc.hpp
src/joint-position-ctrl/: JointPositionCtrl.cpp  JointPositionCtrl.hpp
src/joint-position-task/: QuinticPolynomial.cpp  QuinticPolynomial.hpp  rtt-QuinticPolynomial-wrapper.cpp  rtt-QuinticPolynomial-wrapper.hpp
src/khatib-force-controller/: rtt-jpc.hpp  rtt-khatib.cpp  rtt-khatib.hpp
src/nullspace-controller/: NullspaceController.cpp  NullspaceController.hpp
src/parsertools/: KDLParser.cpp
src/position-controller/: PositionController.cpp  PositionController.hpp  QuaternionHelper.cpp  QuaternionHelper.hpp
src/position-controller-normal/: PositionNormalController.cpp  PositionNormalController.hpp
src/reaching-task/: ReachingTask.cpp  ReachingTask.hpp
src/torque-superposer/: TorqueSuperimposer.cpp  TorqueSuperimposer.hpp  torque-superposer.cpp  torque-superposer.hpp
src/torque-transition/: TorqueTransition.cpp
src/trajectory-generator/: TrajectoryGenerator.cpp  TrajectoryGenerator.hpp
src/trajectory-generatorBoris/: TrajectoryGeneratorBoris.cpp  TrajectoryGeneratorBoris.hpp
src/trajectory-generatorComan/: TrajectoryGeneratorComan.cpp  TrajectoryGeneratorComan.hpp
